# daily-kata

card-game-war/python/: Pipfile  readme.md
card-game-war/python/card_game_war/: card.py  card_suit.py  dealing.py  player.py  war_game.py
card-game-war/python/tests/: test_dealing.py  test_player.py  test_war_game.py
evercraft-code-smells/c-sharp/: .gitignore  Smelly.Code.sln
evercraft-code-smells/c-sharp/src/Smelly.Code.Core/: Character.cs  CharacterAttribute.cs  EvercraftGame.cs  Smelly.Code.Core.csproj  SqliteCharacterReader.cs
evercraft-code-smells/c-sharp/src/Smelly.Code.Core/Readers/: CharacterReader.cs  (+3 more)
fizzbuzz/c++/: .gitignore  CMakeLists.txt  CMakeLists.txt.in
fizzbuzz/c++/include/: fizzbuzz.h
fizzbuzz/c++/src/: fizzbuzz.cpp
fizzbuzz/c++/tests/: fizzbuzz_tests.cpp  main.cpp
gilded-rose/c-sharp/: .gitignore  GildedRose.sln
gilded-rose/c-sharp/src/GildedRose/: AgedBrie.cs  BackstagePass.cs  GildedRose.cs  Item.cs  Sulfuras.cs
gilded-rose/c-sharp/tests/GildedRose.Test/: GildedRose.Test.csproj  GildedRoseTests.cs
horse-kata/javascript/: package.json  readme.md
horse-kata/javascript/src/: data-table.js  data-table.spec.js  filter-metadata.js  horse.js  horse.spec.js  paginated-table.js  paginated-table.spec.js  pagination-metadata.js  sort-metadata.js  table-row-comparer.js
horse-kata/javascript/src/test_support/: sample-data.js
string-calculator/javascript/: .mocharc.js  package.json  readme.md
string-calculator/javascript/docs/: requirements-1.md  requirements-10.md  requirements-11.md  requirements-12.md  requirements-13.md  requirements-2.md  requirements-3.md  requirements-4.md  requirements-5.md  requirements-6.md  requirements-7.md  requirements-8.md  requirements-9.md
string-calculator/javascript/src/: custom-delimiters.js  replace-all.js  string-calculator.js  string-calculator.spec.js
